--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<title>Docker Compose App Example -- master</title>
-<h1>Docker Compose App Example -- master</h1>
+<title>Docker Compose App Example -- hello-branch</title>
+<h1>Docker Compose App Example -- hello-branch</h1>
